fix help-menu content overflow on mobile devices

--- a/src/components/HelpMenu/index.scss
+++ b/src/components/HelpMenu/index.scss
@@ -42,6 +42,7 @@
   z-index: 9999;
   max-width: 244px;
   background: #fff;
+  box-sizing: border-box;
   box-shadow: 0 8px 49px 0 #A2B2D8A6;
   border-radius: 8px;
   padding: 24px 16px;
@@ -148,8 +149,8 @@
     margin-bottom: 8px;
 
     @media screen and (max-width: 600px) {
-      font-size: 20px;
-      line-height: 30px;
+      font-size: 16px;
+      line-height: 20px;
       margin-bottom: 17px;
     }
   }
@@ -203,6 +204,11 @@
     top: 20px;
     right: 30px;
     display: none;
+
+    border: none;
+    background: none;
+    margin: 0;
+    padding: 0;
 
     img {
       width: 24px;
